[package]
name = "zerotable"
version = "0.1.0"
edition = "2024"

[dependencies]
fjall = "3.0.1"
prost = "0.14.3"
prost-types = "0.14.3"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.20.0", features = ["v7"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
tempfile = "3"
