[package]
name = "zerotable"
version = "0.1.0"
edition = "2024"

[dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["http2", "server"] }
hyper-util = { version = "0.1.19", features = ["tokio"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net"] }
